--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "url": "https://github.com/zone117x/node-open-mining-portal.git"
     },
     "dependencies": {
-        "stratum-pool": "http://github.com/paxcoin-project/node-stratum-pool",
+        "stratum-pool": "https://github.com/paxcoin-project/node-stratum-pool",
         "dateformat": "1.0.12",
         "node-json-minify": "*",
         "redis": "0.12.1",
